--- a/classes-project.csproj
+++ b/classes-project.csproj
@@ -6,4 +6,12 @@
     <RootNamespace>classes_project</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Shop.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
 </Project>
